--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,12 @@ h1 {
   text-align: center;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .notes--inner {
   min-height: 500px;
   display: grid;
@@ -57,6 +63,35 @@ h1 {
 
 .current-note {
   outline: 1px solid salmon;
+}
+
+.mosaic-tile {
+  width: 100%;
+  height: 100%;
+}
+
+.mosaic-container {
+  width: fit-content;
+  display: grid;
+  grid-template-columns: repeat(
+    2,
+    50px
+  ); /* Adjust the number and size of columns as needed */
+  grid-template-rows: repeat(
+    2,
+    50px
+  ); /* Adjust the number and size of rows as needed */
+  gap: 1px; /* Gap between tiles */
+
+  background-color: #000; /* Background color for the mosaic */
+}
+
+.blue {
+  background-color: blue; /* Color for blue tiles */
+}
+
+.black {
+  background-color: black; /* Color for black tiles */
 }
 
 .logo {
